syntax = "proto3";

package api.membership;

option go_package = "membership/api/membership;membership";
option java_multiple_files = true;
option java_package = "api.membership";

service Membership {
  rpc CreateMembership (CreateMembershipRequest) returns (CreateMembershipReply);
  rpc UpdateMembership (UpdateMembershipRequest) returns (UpdateMembershipReply);
  rpc DeleteMembership (DeleteMembershipRequest) returns (DeleteMembershipReply);
  rpc GetMembership (GetMembershipRequest) returns (GetMembershipReply);
  rpc ListMembership (ListMembershipRequest) returns (ListMembershipReply);
}

message CreateMembershipRequest {
  string email = 1;
  string fullname = 2;
  string password = 3;
}

message CreateMembershipReply {
  string id = 1;
  string created_at = 2;
}

message UpdateMembershipRequest {
  string id = 1;
  string email = 2;
  string fullname = 3;
  string password = 4;
}

message UpdateMembershipReply {
  bool success = 1;
  string updated_at = 2;
}

message DeleteMembershipRequest {
  string id = 1;
}

message DeleteMembershipReply {
  bool success = 1;
}

message GetMembershipRequest {
  string id = 1;
}

message GetMembershipReply {
  string id = 1;
  string email = 2;
  string fullname = 3;
  string created_at = 4;
  string updated_at = 5;
}

message ListMembershipRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListMembershipReply {
  repeated GetMembershipReply memberships = 1;
}